# lang-nob

./: .glottologid.txt  CITATION.cff  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  _config.yml  abbreviations-affixes-fst-src.md  adjectives-affixes-fst-src.md  adjectives-affixes.md  adjectives-stems-fst-src.md  adjectives-stems.md  adverbs-stems-fst-src.md  adverbs-stems.md  autogen.sh  compounding-morphology.md  configure.ac  conjunctions-stems-fst-src.md  conjunctions-stems.md  disambiguator-cg3-src.md  docu-nob-background.jspwiki  docu-nob-background.md  docu-nob-tags.jspwiki  docu-nob-use.jspwiki  docu-nob-use.md  functions-cg3-src.md  generated-markdowns.targets  giella-nob.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  interjections-stems-fst-src.md  j-nob.xml  manifest.toml  manifest.toml.in  nob-abbreviations-stems-fst-src.md  nob-abbreviations-stems.md  nob-functions-cg3-src.md  (+90 more)
.gut/: delta.toml  manifest.toml
corp/: 1mos.txt
devtools/: adj_minip.sh  analysis_check_corpus.depend.hfsttok.txt  analysis_check_corpus.depend.xfst.txt  analysis_check_corpus.disamb.hfsttok.txt  analysis_check_corpus.disamb.xfst.txt  analysis_check_corpus.functn.hfsttok.txt  analysis_check_corpus.functn.xfst.txt  analysis_check_corpus.morpha.hfsttok.txt  analysis_check_corpus.morpha.htokoldcomp.txt  analysis_check_corpus.morpha.xfst.txt  cmp_minip.sh  der_noun_minip.sh  (+12 more)
docs/: Links.md  Makefile.am  WhatIsThis.jspwiki  _config.yml  adverbs-stems.md  docu-nob-tags.jspwiki  generated-markdowns.sources  index-from-old-infra.html  index-header.md  index.md  index.xml  interjections-stems.md  language-map.md  link-header.md  nob-propernouns-stems.md  nob.jspwiki  nob.md  nouns-stems.md  numerals-stems.md  phonology-morphology.jspwiki  phonology-morphology.md  preamble.jspwiki  pronouns-stems.md  root-morphology.jspwiki  root-morphology.md  site.xml  smi-abbreviations-generated.md  smi-nob-abbreviations-generated.md  smi-propernouns-generated.md  subjunctions-stems.md  tabs.xml
docs/badgedata/: speller-suggestions.json
docs/gramcheck/: index.md
docs/typosreport/: report.json
src/: Makefile  Makefile.am  README  abbr-nob-lex.txt  adj-nob-lex.txt  adj-nob-morph.txt  adv-nob-lex.txt  allcaps.fst  allcaps.regex  allcaps.xfst  closed-nob-lex.txt  feil.txt  inc_dict.txt  inc_from_fad_done_files.lexc  inc_nob_from_fad.txt  nno-nob-lex.txt  nob-1dis.rle  nob-dis.rle  nob-lex.txt  noun-nob-lex.txt  noun-nob-morph.txt  pp-nob-lex.txt  propernoun-nob-lex.txt  punct-nob-lex.txt  spellrelax.regex  tok.txt  tt-nob-dis.rle  twol-nob.txt  verb-nob-lex.txt  verb-nob-morph.txt  x
src/cg3/: Makefile.am  dependency.cg3  disambiguator.cg3  functions.cg3  nob-dependency.cg3  nob-functions.cg3  sentiment.cg3  valency.cg3
src/filters/: Makefile.am  make-optional-derivation-tags.regex  make-optional-dialect-tags.regex  make-optional-error-tags.regex  make-optional-grammatical-tags.regex  make-optional-orig_lang-tags.regex  make-optional-semantic-tags.regex  remove-Nynorsk-strings.regex  remove-derivation-strings.regex  remove-derivation-tags.regex  remove-dialect-tags.regex  remove-error-strings.regex  remove-error-tags.regex  remove-grammatical-tags.regex  remove-norm-comp-tags.regex  remove-orig_lang-tags.regex  remove-semantic-tags-before-derivations.regex  remove-semantic-tags-before-pos.regex  remove-semantic-tags.regex  reorder-semantic-tags.regex
src/fst/: Makefile.am  compounding.lexc  phonology.twolc  root.lexc  tags.yaml
src/fst/affixes/: abbreviations.lexc  acronyms.lexc  adjectives.lexc  nouns.lexc  numerals.lexc  propernouns.lexc  symbols.lexc  verbs.lexc
src/fst/filters/: Makefile.am  insert-semantic-tags-after-pos.regex
src/fst/incoming/: feil.txt
src/fst/incoming/ordbank_bm/: fullform_bm.txt.REMOVED.git-id  obscript.sh  paradigme_bm.txt
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  phonology.twolc  root.lexc
src/fst/morphology/affixes/: abbreviations.lexc  acronyms.lexc  adjectives.lexc  nouns.lexc  numerals.lexc  symbols.lexc  verbs.lexc
src/fst/morphology/incoming/ordbank_bm/: dataformat.txt
src/fst/morphology/stems/: adjectives.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nob-propernouns.lexc  nouns.lexc  prepositions.lexc  pronouns.lexc  subjunctions.lexc  verbs.lexc
src/fst/morphology/test/: Makefile.am  config.json.in  generate-adjective-lemmas.sh.in  generate-noun-lemmas.sh.in  generate-propernoun-lemmas.sh.in  generate-verb-lemmas.sh.in  testadjparadigm.txt  testfemparadigm.txt  testverbparadigm_kort.txt
src/fst/morphology/test/phonology/: Makefile.am
src/fst/stems/: adjectives.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nob-abbreviations.lexc  nob-propernouns.lexc  nouns.lexc  numerals.lexc  nynorsk-stems.lexc  prepositions.lexc  pronouns.lexc  subjunctions.lexc  verbs.lexc
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-numbers-digit2text.lexc  transcriptor-symbols2text.lexc
src/hyphenation/: hyphenation.xfscript
src/morphology/: Makefile.am  compounding.lexc  root.lexc  tags.yaml
src/morphology/affixes/: abbreviations.lexc  acronyms.lexc  adjectives.lexc  nouns.lexc  numerals.lexc  propernouns.lexc  verbs.lexc
src/morphology/incoming/ordbank_bm/: ob.fst  ob.lexc.REMOVED.git-id  paradigme_bm.txt
src/morphology/stems/: abbreviations.lexc  adjectives.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nob-abbreviations.lexc  nob-propernouns.lexc  nouns.lexc  numerals.lexc  nynorsk-stems.lexc  prepositions.lexc  pronouns.lexc  propernouns.lexc  punctuation.lexc  subjunctions.lexc  verbs.lexc
src/ordbank_bm/: ob.save  obscript.sh
src/orthography/: spellrelax.regex
src/phonology/: nob-phon.twolc
src/scripts/: abbr_grep.pl  nobDB_txt2xml.xsl  setning  smi-nob-conversion.pl
src/syntax/: disambiguation.cg3  disambiguator.cg3  functions.cg3  nob-functions.cg3
src/transcriptions/: transcriptor-numbers-digit2text.lexc
tools/mt/: Makefile.am  Makefile.modifications.am
tools/mt/apertium/tagsets/: README.txt
(+190 files in other folders)
