## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md          \
		adjectives-stems.md          \
		adverbs-stems.md             \
		conjunctions-stems.md        \
		interjections-stems.md       \
		nob-abbreviations-stems.md   \
		nob-propernouns-stems.md     \
		nouns-affixes.md             \
		nouns-stems.md               \
		numerals-stems.md            \
		nynorsk-stems-stems.md       \
		phonology-morphology.md      \
		prepositions-stems.md        \
		pronouns-stems.md            \
		subjunctions-stems.md        \
		verbs-affixes.md             \
		verbs-stems.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am

# acronyms-stems.md           \
# adjectives-affixes.md       \
# adjectives-oahpa-affixes.md \
# adjectives-oahpa-stems.md   \
# clitics-morphology.md       \
# compounding-morphology.md   \
# nouns-oahpa-stems.md        \
# particles-stems.md          \
# propernouns-affixes.md      \
# propernouns-stems.md        \
# punctuation-stems.md
